syntax = "proto3";

package education;

option go_package = "/proto;proto";


service EducationService {
  rpc GetCourses (Empty) returns (CourseList);
  rpc GetCourseByID (CourseIDRequest) returns (Course);
  rpc CreateCourse (NewCourseRequest) returns (Course);
}

message Empty {}

message Course {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CourseList {
  repeated Course courses = 1;
}

message CourseIDRequest{
  int64 id = 1;
}

message NewCourseRequest {
  string name = 1;
  string description = 2;
}

